# qumulo_snapman_v2

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_job_type.py  0003_warm_trees.py
backend/app/: auth.py  bootstrap.py  config.py  database.py  jobs.py  logsetup.py  main.py  models.py  warm_sweep.py
backend/app/qumulo/: api.py  cache.py  client.py  paths.py
backend/app/qumulo/compute/: curve.py  deletion_estimate.py  goal.py  groups.py  inspect.py  intervals.py  reclaim.py  snapshot_exclusive.py  snapshot_exclusive_job.py  snapshot_reclaim.py  units.py
backend/app/routers/: admin_logs.py  auth.py  clusters.py  inspect.py  users.py
backend/test/: client.py  test_admin_logs.py  test_api_version_check.py  test_deletion_estimate.py  test_goal.py  test_qumulo_client.py  test_run_inspect.py  test_run_snapshot_exclusive.py  test_snapshot_exclusive.py
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.http.conf  nginx.https.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  consoleLog.ts  index.css  main.tsx  types.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Admin.tsx  Dashboard.tsx  GoalModal.tsx  InspectDetail.tsx  Login.tsx
